--- a/package.json
+++ b/package.json
@@ -22,72 +22,71 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@stakater/fragments": "0.0.0",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "clsx": "^1.1.1",
-    "final-form": "^4.20.1",
-    "framer-motion": "^2.9.4",
-    "helmet": "^4.4.1",
-    "keycloak-js": "11.0.3",
-    "lodash": "^4.17.20",
+    "final-form": "^4.20.2",
+    "framer-motion": "^4.1.17",
+    "helmet": "^4.6.0",
+    "lodash": "^4.17.21",
     "moment": "~2.29.1",
-    "nested-combine-reducers": "^1.2.2",
-    "polished": "^4.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-final-form": "^6.5.2",
-    "react-redux": "^7.2.2",
+    "nested-combine-reducers": "^2.0.0",
+    "polished": "^4.1.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.3",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux-devtools-extension": "^2.13.8",
+    "redux-devtools-extension": "^2.13.9",
     "redux-observable": "^1.2.0",
     "reflect-metadata": "^0.1.13",
     "reselect": "^4.0.0",
-    "rxjs": "^6.6.3",
-    "styled-components": "^5.2.1",
+    "rxjs": "^6.6.7",
     "urijs": "^1.19.6"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.12.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@svgr/webpack": "^5.5.0",
-    "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.165",
-    "@types/moment-timezone": "^0.5.13",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4",
-    "@types/urijs": "^1.19.13",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "awesome-typescript-loader": "^5.2.1",
+    "@types/lodash": "^4.14.170",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
+    "@types/urijs": "^1.19.15",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-testing-library": "^3.10.1",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-testing-library": "^4.6.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
-    "glob": "^7.1.6",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.0",
-    "http-proxy-middleware": "^1.0.6",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
     "http-server": "^0.12.3",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.2.0",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "lodash": "^4.17.21",
+    "prettier": "^2.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "typescript": "4.1.2",
+    "styled-components": "^5.3.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "xmlhttprequest": "^1.8.0"
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
