--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: "3.9"
 services:
   webapp:
+    image: node:14-alpine
     build:
       context: .
     environment:
       - REVIEW_API=http://review.gabbar-dev.svc.cluster.local
     ports:
-      - "4200:4200"
+      - "8080:4200"
