--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -20,9 +20,9 @@ application:
     volumes: {}
     image:    
       # replaced by CI pipeline
-      repository: {{ IMAGE }}
+      repository: IMAGE
       # replaced by CI pipeline     
-      tag: {{ TAG }}
+      tag: TAG
     env:
     - name: PORT
       value: "4200"
