--- a/deploy/Chart.yaml
+++ b/deploy/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: review-web
+name: stakater-nordmart-review-ui
 description: A Helm chart for Kubernetes
 dependencies:
 - name: application
