--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -1,7 +1,7 @@
 application:
   applicationName: "review-web"
   namespace:
-    enabled: true
+    enabled: false
     additionalLabels:
       kind: pr
       team: gabbar
