--- a/.tronador.yaml
+++ b/.tronador.yaml
@@ -1,8 +1,7 @@
 application:
   chart_path: deploy
   namespaceLabels:
-    kind: pr
-    team: gabbar
+    stakater.com/kind: pr
     stakater.com/tenant: gabbar
   value_overrides:
     application:
@@ -10,4 +9,3 @@ application:
         image:
           repository: {{APPLICATION_IMAGE_NAME}}
           tag: {{APPLICATION_IMAGE_TAG}}
-
