--- a/deploy/Chart.yaml
+++ b/deploy/Chart.yaml
@@ -3,7 +3,7 @@ name: stakater-nordmart-review-ui
 description: A Helm chart for Kubernetes
 dependencies:
 - name: application
-  version: 1.0.*
+  version: 1.1.7
   repository: https://stakater.github.io/stakater-charts
 
 # DON'T TOUCH THIS
