--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -13,8 +13,8 @@ application:
       maistra.io/expose-route: "true"
     volumes: {}
     image:
-      repository: REPLACED_BY_CI_PIPELINE
-      tag: REPLACED_BY_CI_PIPELINE
+      repository: review-web
+      tag: any-version
     env:
       PORT:
         value: "4200"
