Update Review-UI URL

--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -20,7 +20,7 @@ application:
         value: "4200"
       REVIEW_API:
       # This is hardcoded!
-        value: "https://review-gabbar-dev.apps.binero-test.8sdzwd1l.kubeapp.cloud"
+        value: "https://review-gabbar-dev.apps.devtest.vxdqgl7u.kubeapp.cloud"
     probes:
       readinessProbe:
         failureThreshold: 3
