--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "framer-motion": "^4.1.17",
     "helmet": "^4.6.0",
     "lodash": "^4.17.21",
-    "moment": "~2.29.1",
+    "moment": "^2.29.4",
     "nested-combine-reducers": "^2.0.0",
     "polished": "^4.1.3",
     "react": "^17.0.2",
@@ -43,12 +43,12 @@
     "reflect-metadata": "^0.1.13",
     "reselect": "^4.0.0",
     "rxjs": "^6.6.7",
-    "urijs": "^1.19.6"
+    "urijs": "^1.19.11"
   },
   "devDependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@svgr/webpack": "^5.5.0",
+    "@svgr/webpack": "^6.3.1",
     "@types/lodash": "^4.14.170",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
