--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "author": "Quang Vu",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve --mode development --env VERSION=v1.01",
+    "start": "webpack serve --mode development --env VERSION=v1.01 MATOMO_BASE_URL=https://sorcerers-matomo-sorcerers-dev.apps.devtest.vxdqgl7u.kubeapp.cloud",
     "start:dev": "npm start",
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@datapunt/matomo-tracker-react": "^0.5.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.58",
