Added support for exposing PAGE_TITLE ENV

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Quang Vu",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve --mode development --env VERSION=v1.01",
+    "start": "webpack serve --mode development --env VERSION=v1.01 --env PAGE_TITLE=Secret",
     "start:dev": "npm start",
     "build": "webpack --mode production"
   },
