--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -12,7 +12,7 @@ application:
         value: "4200"
       REVIEW_API:
         # This is hardcoded!
-        value: "https://review-gabbar-dev.apps.devtest.vxdqgl7u.kubeapp.cloud"
+        value: "https://review-webinar-dev.apps.preprod.jlvwjls8.kubeapp.cloud"
       PAGE_TITLE:
          valueFrom:
             secretKeyRef:
